--- a/final/src/components/Home.css
+++ b/final/src/components/Home.css
@@ -249,10 +249,11 @@ margin-left: 50px;
       align-items: center;
       gap: 10px;
       font-size: 16px;
+      height: 60px;
     }
 
     .account-button i {
-      font-size: 20px;
+      font-size: 30px;
     }
 
     .account-email {
