--- a/final/src/components/Dresses.css
+++ b/final/src/components/Dresses.css
@@ -134,8 +134,15 @@
   .products-container {
   grid-template-columns: repeat(2, 1fr); /* 4 columns */
 }
+.sell{
+  height: 400px;
+}
 .sell img{
 width: 100%;
+height: 250px;
+}
+.sell p{
+  font-size: 15px;
 }
 .imgarea{
   width: 30%;
